# silver-telegram

./: .env.example  .envrc  .gitignore  CLAUDE.md  Cargo.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: PRD.md
docs/architecture/: ARCHITECTURE.md
docs/architecture/decisions/: 0001-postgresql.md  0002-spicedb.md  0003-single-instance.md  0004-nats-jetstream.md  0005-workflow-representation.md  0006-workflow-execution.md  0007-configuration-management.md  README.md
docs/plans/2025-12-25-workflow-execution-model/: brainstorming-log.md
docs/specs/: ai-node-configuration-user-stories.md  ai-node-configuration.md  autonomous-operations.md  integrations.md  platform-access.md  product-spec.md  user-stories.md
infra/spicedb/: schema.zed
lib/ai/: Cargo.toml
lib/ai/src/: backend.rs  coordinate.rs  error.rs  feedback.rs  lib.rs  llm_call.rs  prompt.rs
lib/authz/: Cargo.toml  schema.zed
lib/authz/src/: client.rs  error.rs  lib.rs  types.rs
lib/conversation/: Cargo.toml
lib/conversation/src/: context.rs  error.rs  lib.rs  message.rs  session.rs  tool.rs
lib/core/: Cargo.toml
lib/core/src/: error.rs  id.rs  lib.rs
lib/integration/: Cargo.toml
lib/integration/src/: connector.rs  credential.rs  error.rs  lib.rs  rate_limit.rs
lib/platform-access/: Cargo.toml
lib/platform-access/src/: auth.rs  error.rs  lib.rs  oidc.rs  role.rs  session.rs  user.rs
lib/scheduler/: Cargo.toml
lib/scheduler/src/: error.rs  lib.rs  manager.rs  schedule.rs
lib/workflow/: Cargo.toml
lib/workflow/src/: definition.rs  edge.rs  envelope.rs  error.rs  execution.rs  graph.rs  lib.rs  nats.rs  node.rs  orchestrator.rs  port.rs  remaining_work.rs  run_state.rs  trigger.rs  worker.rs
scripts/: install_pkgs.sh
