[workspace]
members = ["lib/*", "bin/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]
license = "FSL-1.1-Apache-2.0"
repository = "https://github.com/Technosorcery/silver-telegram"

[workspace.dependencies]
# Workspace crates
silver-telegram-core = { path = "lib/core" }
silver-telegram-workflow = { path = "lib/workflow" }
silver-telegram-ai = { path = "lib/ai" }
silver-telegram-integration = { path = "lib/integration" }
silver-telegram-conversation = { path = "lib/conversation" }
silver-telegram-scheduler = { path = "lib/scheduler" }
silver-telegram-platform-access = { path = "lib/platform-access" }
silver-telegram-authz = { path = "lib/authz" }

# Error handling
rootcause = "0.11.0"

# Async traits
async-trait = "0.1"

# Time
time = "0.3"

# Web framework
leptos = "0.8.15"
leptos_router = "0.8"
leptos_meta = "0.8"
leptos_axum = "0.8"

# Server runtime
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }

# Authentication
openidconnect = { version = "4.0", features = ["reqwest"] }
oauth2 = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Authorization (SpiceDB)
spicedb-client = "0.1"
spicedb-grpc = "0.1"
tonic = "0.12"
tokio-stream = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }

# Messaging
async-nats = "0.38"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.15"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location", "Element", "DomRect", "SvgElement", "MouseEvent", "EventTarget"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Graph processing
petgraph = { version = "0.7", features = ["serde-1"] }

# Utilities
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }

# Dev dependencies
tempfile = "3"

# Optimized profile for WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
