[package]
name = "silver-telegram-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI primitives for silver-telegram"

[dependencies]
silver-telegram-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
