[package]
name = "silver-telegram-conversation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Conversation service for silver-telegram"

[dependencies]
silver-telegram-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
