[package]
name = "silver-telegram-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain types and error handling for silver-telegram"

[dependencies]
rootcause.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
