[package]
name = "silver-telegram-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Scheduler for silver-telegram workflow triggers"

[dependencies]
silver-telegram-core.workspace = true
silver-telegram-workflow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
