[package]
name = "silver-telegram-workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Workflow engine for silver-telegram"

[dependencies]
silver-telegram-core.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
